--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^22.15.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "fast-xml-parser": "^4.5.0"
   }
 }
